--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,25 @@
 body {
-    background-color: ghostwhite;
+    background-color: slategray;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+}
+
+.registrationForm {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.registrationForm label {
+    margin-bottom: 0.5em;
+}
+
+.registrationForm input {
+    margin-bottom: 1.5em;
+    padding: 0.5em;
+}
+
+.registrationForm button {
+    margin-bottom: 1.5em;
+    padding: 0.5em 1.5em;
 }
