--- a/client/style.css
+++ b/client/style.css
@@ -5,6 +5,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
 }
 
 body {
@@ -24,6 +26,30 @@ main {
     max-width: 1400px;
     width: 90vw;
     margin: 0 auto;
+}
+
+textarea {
+    padding: 1em;
+    width: 400px;
+    height: 100px;
+    border-radius: 3px;
+    resize: vertical;
+    border: none;
+}
+
+button {
+    padding: 0.5em 1em;
+    border: none;
+    border-radius: 3px;
+    background-color: var(--accent);
+    color: var(--light);
+}
+
+button:hover {
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+    background-color: var(--light);
+    color: var(--accent);
+    border: 1px solid var(--accent);
 }
 
 .registrationForm {
