--- a/client/style.css
+++ b/client/style.css
@@ -29,15 +29,18 @@ main {
 }
 
 textarea {
+    font-size: 1em;
     padding: 1em;
     width: 400px;
     height: 100px;
     border-radius: 3px;
     resize: vertical;
     border: none;
+    display: block;
 }
 
 button {
+    margin-block: 1em;
     padding: 0.5em 1em;
     border: none;
     border-radius: 3px;
@@ -119,13 +122,19 @@ nav {
     top: -100px;
 }
 
+.profile {
+    display: flex;
+    gap: 2em;
+}
+
 .profile .profile-widget {
-    height: 200px;
+    height: 300px;
+    width: 300px;
 }
 
 .profile .profile-widget img {
-    width: 200px;
     height: 100%;
+    width: 100%;
     border-radius: 3px;
     object-fit: cover;
     background-color: var(--accent);
@@ -135,4 +144,15 @@ nav {
 
 .profile h3 {
     margin-top: 1em;
+    margin-bottom: 2em;
+}
+
+.others-profile .profile-pic {
+    height: 300px;
+    width: 300px;
+    border-radius: 3px;
+    object-fit: cover;
+    background-color: var(--accent);
+    margin: 0;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2), 1px 1px 5px rgba(0, 0, 0, 0.2);
 }
