--- a/client/style.css
+++ b/client/style.css
@@ -142,9 +142,14 @@ nav {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2), 1px 1px 5px rgba(0, 0, 0, 0.2);
 }
 
-.profile h3 {
+.info-profile h3 {
     margin-top: 1em;
     margin-bottom: 2em;
+}
+
+.others-profile {
+    display: flex;
+    gap: 2em;
 }
 
 .others-profile .profile-pic {
