--- a/client/style.css
+++ b/client/style.css
@@ -161,3 +161,54 @@ nav {
     margin: 0;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2), 1px 1px 5px rgba(0, 0, 0, 0.2);
 }
+
+.most-recent {
+    margin-block: 3em;
+    display: flex;
+    justify-content: space-between;
+    gap: 2em;
+}
+
+.most-recent-card {
+    display: flex;
+    width: ;
+    flex-grow: 1;
+    gap: 1em;
+    flex-direction: column;
+    align-items: center;
+}
+
+.most-recent-card p {
+    font-size: 1.3em;
+}
+
+.most-recent-card img {
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    background-color: var(--accent);
+    margin: 0;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2), 1px 1px 5px rgba(0, 0, 0, 0.2);
+}
+
+.search-users {
+    position: relative;
+    width: 300px;
+}
+
+.search-users label {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    background-color: white;
+    padding: 2px 2px 2px 10px;
+}
+
+#search-user {
+    padding: 0.5em;
+    border: none;
+    border-radius: 3px;
+    width: 100%;
+    font-size: 1em;
+}
