--- a/client/style.css
+++ b/client/style.css
@@ -152,6 +152,7 @@ nav .btn:hover {
     border: none;
     padding: 1em 0 0 0;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .uploader label {
