Working on Part 9

--- a/client/style.css
+++ b/client/style.css
@@ -97,12 +97,17 @@ nav {
     margin-bottom: 2em;
 }
 
+nav > div {
+    margin-left: auto;
+    display: flex;
+}
+
 nav .btn {
     font-size: 1.5em;
     font-weight: 700;
     text-decoration: none;
     color: var(--dark);
-    margin-left: auto;
+    margin-left: 1em;
     padding: 0.3em 0.5em;
     border-radius: 3px;
     border: 1px solid var(--dark);
@@ -141,6 +146,7 @@ nav .btn:hover {
     color: var(--light);
     border-radius: 3px;
     box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 10;
 }
 
 .uploader .logout {
@@ -306,4 +312,8 @@ nav .btn:hover {
 .search-result {
     justify-content: flex-start;
     width: 100%;
+}
+
+section h2 {
+    margin-bottom: 1em;
 }
