Fixed Oline Users

--- a/client/style.css
+++ b/client/style.css
@@ -62,8 +62,9 @@ header h1 {
 
 .welcome {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    width: 50%;
+    width: 300px;
     margin: 3em auto;
     gap: 3em;
 }
